# stocksim

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  linear.cpp  main.cpp  modern.cpp
src/cmake_modules/: FindEigen3.cmake
